# gym_race

./: CMakeLists.txt  Pyrace_RL_QTable.py  README.md  README_TRAINING.md  build_palm_test.sh  evaluate_any_checkpoint.py  evaluate_ddpg.py  package.json  pyrace_continuous_wrapper.py  pyrace_fix.py  requirements.txt  resume_training.py  run_rl.bat  scanner-service.js  setup_conda.bat  setup_env.py  start-scanner-service.sh  test_ddpg.py  test_ddpg_fixed.py  test_ddpg_original.py  test_visualization.py  train_ddpg.py  train_ddpg_overnight.py
ddpg_models/20250403_033156/: training_log.txt
ddpg_models/20250403_041447/: training_log.txt
ddpg_models/20250403_041557/: training_log.txt
ddpg_models/20250403_041652/: training_log.txt
ddpg_models/20250403_041736/: training_log.txt
ddpg_models/20250403_041747/: training_log.txt
ddpg_models/improved_20250403_221357/: training_log.txt
ddpg_models/improved_20250403_221635/: training_log.txt
ddpg_models/improved_20250403_222439/: training_log.txt
ddpg_models/improved_20250403_222515/: training_log.txt
ddpg_pyrace_tensorboard/20250403_142052/DDPG_1/: events.out.tfevents.1743682854.Wisams-MacBook-Pro.local.15856.0
ddpg_pyrace_tensorboard/20250403_160134/DDPG_1/: events.out.tfevents.1743688895.Wisams-MacBook-Pro.local.69934.0
ddpg_pyrace_tensorboard/20250403_161815/DDPG_1/: events.out.tfevents.1743689898.DESKTOP-PROBFMI.10756.0
ddpg_pyrace_tensorboard/20250403_164017/DDPG_1/: events.out.tfevents.1743691218.DESKTOP-PROBFMI.21512.0
ddpg_pyrace_tensorboard/20250403_164359/DDPG_1/: events.out.tfevents.1743691440.DESKTOP-PROBFMI.13000.0
ddpg_pyrace_tensorboard/20250403_181938/DDPG_1/: events.out.tfevents.1743697179.DESKTOP-PROBFMI.636.0
ddpg_pyrace_tensorboard/DDPG_1/: events.out.tfevents.1743639504.Wisams-MacBook-Pro.local.96289.0
ddpg_pyrace_tensorboard/DDPG_10/: events.out.tfevents.1743643379.Wisams-MacBook-Pro.local.33957.0
ddpg_pyrace_tensorboard/DDPG_11/: events.out.tfevents.1743643391.Wisams-MacBook-Pro.local.34104.0
ddpg_pyrace_tensorboard/DDPG_12/: events.out.tfevents.1743643487.Wisams-MacBook-Pro.local.35005.0
ddpg_pyrace_tensorboard/DDPG_13/: events.out.tfevents.1743643665.Wisams-MacBook-Pro.local.36733.0
ddpg_pyrace_tensorboard/DDPG_14/: events.out.tfevents.1743643920.Wisams-MacBook-Pro.local.39739.0
ddpg_pyrace_tensorboard/DDPG_15/: events.out.tfevents.1743646614.DESKTOP-PROBFMI.25400.0
ddpg_pyrace_tensorboard/DDPG_16/: events.out.tfevents.1743646657.DESKTOP-PROBFMI.12780.0
ddpg_pyrace_tensorboard/DDPG_17/: events.out.tfevents.1743646668.DESKTOP-PROBFMI.19308.0
ddpg_pyrace_tensorboard/DDPG_2/: events.out.tfevents.1743639603.Wisams-MacBook-Pro.local.97241.0
ddpg_pyrace_tensorboard/DDPG_3/: events.out.tfevents.1743639815.Wisams-MacBook-Pro.local.99369.0
ddpg_pyrace_tensorboard/DDPG_4/: events.out.tfevents.1743640609.Wisams-MacBook-Pro.local.7247.0
ddpg_pyrace_tensorboard/DDPG_5/: events.out.tfevents.1743640749.Wisams-MacBook-Pro.local.8780.0
ddpg_pyrace_tensorboard/DDPG_6/: events.out.tfevents.1743640942.Wisams-MacBook-Pro.local.10868.0
ddpg_pyrace_tensorboard/DDPG_7/: events.out.tfevents.1743641363.Wisams-MacBook-Pro.local.14954.0
ddpg_pyrace_tensorboard/DDPG_8/: events.out.tfevents.1743641803.Wisams-MacBook-Pro.local.19030.0
ddpg_pyrace_tensorboard/DDPG_9/: events.out.tfevents.1743643110.Wisams-MacBook-Pro.local.31294.0
gym_race/envs/: race_env.py
(+2 files in other folders)
